@@ -1,3 +1,9 @@
+2007-02-23  Nick Clifton  <nickc@redhat.com>
+
+	PR binutils/3535
+	* elf.c (copy_private_bfd_data): Always rewrite the program
+	headers when a Solaris interpreter segment is involved.
+
 2007-02-22  Paul Brook  <paul@codesourcery.com>
 
 	* elflink.c (gc_mark_hook_fn): Remove.
